--- a/front-end-app/src/App.css
+++ b/front-end-app/src/App.css
@@ -3,10 +3,13 @@
   padding: 0;
 }
 
+:root {
+  --primary-color: #0077b6;
+}
+
 .wrapper {
   height: 100%;
   width: 100%;
-  padding: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,30 +17,34 @@
 }
 
 .container {
-  background-color: rgb(160, 160, 160);
-  width: 600px;
+  width: 900px;
   border-radius: 10px;
   padding: 10px;
-  border: solid rgb(140, 140, 140);
 }
 
 h1 {
   margin-bottom: 10px;
 }
 
-table {
-  width: 100%;
-  background-color: white;
-}
-
-table, th, td {
-  border: 1px solid black;
+#customers {
   border-collapse: collapse;
-  padding: 5px;
+  width: 100%;
 }
 
-th {
-  background-color: lightgray;
+#customers td, #customers th {
+  padding: 8px;
+}
+
+#customers tr:nth-child(even){background-color: #f2f2f2;}
+
+#customers tr:hover {background-color: #ddd;}
+
+#customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: var(--primary-color);
+  color: white;
 }
 
 
@@ -47,10 +54,10 @@ input {
 
 .buttons {
   background-color: white;
-  border: 1px solid black;
+  margin-top: 10px;
 }
 
-button {
+.form-button {
   height: 30px;
   width: 90px;
   margin: 5px;
@@ -67,4 +74,117 @@ button {
 input[type=number] {
   margin-left: 5px;
   width: 50px
+}
+
+.search-bar-wrapper {
+  position: relative;
+  display: flex;
+  min-width: 100px;
+  justify-content: center;
+}
+
+.search-bar {
+  border: 1px solid grey;
+  border-radius: 5px;
+  height: 20px;
+  width: 100%;
+  padding: 2px 23px 2px 30px;
+  outline: 0;
+  background-color: #f5f5f5;
+  height: 30px;
+  margin-bottom: 10px;
+}
+
+.search-bar:hover, .search-bar:focus {
+  border: 1.5px solid var(--primary-color);
+  background-color: white;
+}
+
+
+.search-icon {
+  position: absolute;
+  top: 12px;
+  left: 130px;
+  width: 14px;
+}
+
+.clear-icon {
+  position: absolute;
+  top: 8px;
+  right: 128px;
+  width: 20px;
+  cursor: pointer;
+}
+
+.pagination-button{
+  border: none;
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  cursor: pointer;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.pagination-button:hover{
+  background-color: #0076b66d;
+}
+
+.pagination-wrapper {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin-top: 10px;
+}
+
+#perPage {
+  height: 30px;
+  text-align: center;
+}
+
+.add-update-form {
+  width: 600px;
+}
+
+.text-input {
+  width: 100%;
+  border-radius: 10px;
+  padding: 10px; 
+  border: 2px solid grey;
+}
+
+.input-group {
+  margin-top: 10px;
+}
+
+.text-input:hover, .text-input:focus {
+  border: 2px solid var(--primary-color);
+  background-color: white;
+}
+
+.label {
+  margin-bottom: 5px;
+}
+
+.buttons{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.form-button {
+  height: 50px;
+  width: 100px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.save {
+  background-color: var(--primary-color);
+  color: rgb(232, 232, 232);
+}
+
+.delete {
+  background-color: rgb(219, 79, 79);
+  color: rgb(232, 232, 232);
 }
