--- a/front-end-app/src/App.css
+++ b/front-end-app/src/App.css
@@ -43,7 +43,6 @@ h1 {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: var(--primary-color);
   color: white;
 }
 
@@ -104,14 +103,14 @@ input[type=number] {
 .search-icon {
   position: absolute;
   top: 12px;
-  left: 130px;
+  left: 115px;
   width: 14px;
 }
 
 .clear-icon {
   position: absolute;
   top: 8px;
-  right: 128px;
+  right: 118px;
   width: 20px;
   cursor: pointer;
 }
@@ -140,6 +139,7 @@ input[type=number] {
 #perPage {
   height: 30px;
   text-align: center;
+  margin-right: 20px;
 }
 
 .add-update-form {
@@ -187,4 +187,14 @@ input[type=number] {
 .delete {
   background-color: rgb(219, 79, 79);
   color: rgb(232, 232, 232);
+}
+
+.color-picker {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  margin-left: 10px;
 }
